add_subdirectory( fc )
add_subdirectory( schema )
add_subdirectory( chainbase )
add_subdirectory( protocol )
add_subdirectory( chain_ledger )
add_subdirectory( chain_objects )
add_subdirectory( chain_branch )
add_subdirectory( chain_shared )
add_subdirectory( chain_hardfork )
add_subdirectory (chain_refactory)
add_subdirectory( chain )
add_subdirectory( chain_new )
add_subdirectory( net )
add_subdirectory( utilities )
add_subdirectory( app )
add_subdirectory( plugins )
add_subdirectory( wallet )
add_subdirectory( manifest )
